@@ -1,3 +1,8 @@
+9/21/2023 10:30a
+    Added priority queue implementation using a binary heap (generated by ChatGPT)
+    Refactored code to use Tile struct
+    Refactored code to use data_structures directory
+
 9/16/2023 1:30p
     Added fly
     Fixed bug where allocated memory not uninitialized to null
